...
        children: [
          TextFormField(
            decoration: const InputDecoration(hintText: "Introduce some food"),
            keyboardType: TextInputType.text,
            validator: (value) {
              if (value == null || value.isEmpty || value.trim() == "") {
                return "Please introduce food";
              }
              context.read<SearchModel>().setFoodKeyword(value);
              return null;
            },
          ),
          const Padding(padding: EdgeInsets.all(10.0),),
...
            TextStyle(
                fontSize: 14,
                fontWeight: FontWeight.bold
            ),
          ),
          DropdownButton<String>(
            key: const ValueKey('dropdown'),
            items: [
              "Everywhere",
              "American",
              "Asian",
              "British",
              "Caribbean",
              "Central Europe",
              "Chinese",
              "Eastern Europe",
              "French",
              "Indian",
              "Italian",
              "Japanese",
...
                      content: Text("Searching..."),
                      duration: Duration(seconds: 1),
                    ),
                  );
                }
              },
              child: const Text("Search"),
            ),
          ),
        ],
      ),
    );
  }
...
          fontSize: 20,
        ),
      ),
    )
        : recipes.isEmpty
        ? const Center(child:
    Text("No recipes found!",
      style: TextStyle(
        fontStyle: FontStyle.italic,
        fontSize: 20,
      ),
    ),
    )
...
            final metrics = scrollEnd.metrics;
            if (metrics.atEdge) {
              bool isTop = metrics.pixels == 0;
              if (!(isTop)) {
                ScaffoldMessenger.of(context).showSnackBar(
                  const SnackBar(
                    content: Text("Loading more recipes..."),
                    duration: Duration(seconds: 1),
                  ),
                );
                String foodKeyword = context.read<SearchModel>().foodKeyword;
                String cuisineType = context.read<SearchModel>().cuisineType;
                List<RecipeBlock> blocks = context.read<RecipesModel>().blocks;
...
                          Navigator.push(
                            context,
                            MaterialPageRoute(
                                builder: (context) => DetailsPage(recipe: recipe, isMobile: isMobile,)),
                          );
                        },
                        child: const Text("View Details"),
                      ),
                    ],
                  ),
                );

              }else{
...
              ),
              Padding(
                padding: const EdgeInsets.only(bottom: 8.0),
              ),
              DetailsRow(
                icon: Icons.people,
                title: "Servings:",
                info: "\n${(recipe.servings)?.round()} people\n",
              ),
              DetailsRow(
                icon: Icons.local_fire_department_rounded,
                title: "Calories: ",
                info: "\n${(recipe.calories)?.round()} kcal per serving\n",
...
